# invman

./: .codex_tmp_marker_do_not_merge  .gitignore  AGENTS.md  Cargo.toml  README.md  plan.md  requirements.txt  setup.py
agentic_policy_search/: .gitignore  README.md  RESULTS_instance14.md  RESULTS_padn_mixed.md  SMOKE.md  evaluate_policy_spec.py  evaluate_policy_spec_padn.py  policy_spec_compiler.py  policy_spec_compiler_padn.py
agentic_policy_search/agent/: Cargo.toml
agentic_policy_search/agent/src/: actions.rs  brain.rs  main.rs
agentic_policy_search/specs/: bad_symmetric_on_asymmetric.json  bad_unknown_action_head.json  direct_orders_unwarmed.json  gate_anchor_padn_residual_base_stock.json  padn_explore_best.json  winner_gen1_oblique_perret_linear.json
autoresearch/: POLICY_DESIGN_GUIDELINES.md  README.md  program_ameliorating_inventory.md  program_dual_sourcing.md  program_fixed_order_cost.md  program_general_backorder_fixed_cost.md  program_joint_replenishment.md  program_lost_sales.md  program_multi_echelon.md  program_multi_echelon_serial.md  program_one_warehouse_multi_retailer.md  program_perishable_inventory.md  program_production_assembly_distribution_network.md  program_vendor_managed_inventory.md
autoresearch/dual_sourcing_policy_search/: README.md  run_factor_screen.py  summarize_factor_screen.py
autoresearch/factorized_action_policy_search/: README.md
autoresearch/fixed_cost_ordinal_stability/: README.md  ablate_state_drift.py  collect_policy_scale_results.py  collect_scale_sweep_results.py  replay_exact_ordinal.py  scale_tree_d2_local_p50_results.md  summarize_fixed_cost_ordinal_history.py
autoresearch/replenishment_geometry_search/: README.md
docs/: README.md  rust.md
invman/: README.md  __init__.py  cmaes.py  config.py  cpu_limits.py  dual_sourcing_policy_spec.py  es.py  es_mp.py  experiment_runner.py  lost_sales_benchmark.py  lost_sales_fixed_order_cost_benchmark.py  lost_sales_problem_info.py  lost_sales_reference.py  optimizer_seed_robustness_policy.py  policy.py  policy_build.py  policy_common.py  policy_registry.py  ppo_trainer.py  reference_instances.py  rollout_fitness.py  utils.py
numerical_experiments/: README.md  __init__.py  catalog.py  run.py
paper/: README.md  fixed_order_cost_lost_sales.tex  generate_results_tables.py  inventory_control_policy_benchmarks.tex  invman_lostsales.tex  learning_inventory_control_policies_es.tex  peer_review_learning_inventory_control_policies_es.md  policy_parameter_counts.py  policy_state_action_examples.py  push_to_overleaf.py  references.bib
plan/: README.md
policy_search/: POLICY_DESIGN_GUIDELINES.md  README.md
presentation/: README.md  index.html
rust/: Cargo.toml  README.md  pyproject.toml
scripts/: README.md  analyze_fixed_cost_policy.py  autoresearch_dual_sourcing.py  autoresearch_dual_sourcing_backbones.py  autoresearch_dual_sourcing_policy_structures.py  autoresearch_fixed_order_cost.py  autoresearch_fixed_order_tree_structures.py  autoresearch_lost_sales.py  autoresearch_multi_echelon.py  autoresearch_tree_structures.py  benchmark_fixed_cost_canonical_suite.py  benchmark_fixed_cost_full_suite.py  benchmark_fixed_order_cost_grid.py  build_rust_extension.py  check_baseline_registry.py  compare_fixed_order_cost_search_backends.py  evaluate_saved_policy.py  raw_state_single_policy_probe.py  run_all_seed_robust_full_budget_audits.sh  run_experiment.py  run_lost_sales_paper_benchmarks.py  sweep_fixed_cost_nn.py  validate_dual_sourcing_reference_grid.py  validate_fixed_order_cost_heuristics.py  validate_multi_echelon_reference_grid.py  validate_reference_instance.py
src/: lib.rs
tests/: test_benchmark_catalog.py  test_benchmark_runners.py  test_cpu_limits.py  test_dual_sourcing_problem.py  test_fixed_cost_full_suite_parallel.py  test_fixed_order_cost_heuristics.py  test_fixed_order_cost_reference_grid.py  test_fixed_order_cost_search_backends.py  test_invman_rust_bridge.py  test_lost_sales_demand.py  test_lost_sales_env.py  test_lost_sales_reference_grid.py  test_multi_echelon_problem.py  test_numerical_experiments_catalog.py  test_policy_factory.py  test_policy_parameter_counts.py  test_practical_benchmark_reports.py  test_problem_verification_files.py  test_reference_instance.py  test_reproducibility.py  test_run_status_tracker.py  test_rust_first_migration.py  test_soft_tree_policy.py
(+1388 files in other folders)
