[package]
name = "invman_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "invman_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]

[dependencies]
microlp = "0.4.0"
pyo3 = { version = "0.21", features = ["abi3-py39"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "=1.7.0"
statrs = "0.18"
