# agentic_policy_search :: agent crate (Cargo.toml)
# =================================================================================================
# ALGORITHMIC ROLE
# -----------------------------------------------------------------------------------------------
# This is the standalone Rust crate that hosts the *outer evolution loop* of agentic_policy_search:
# a `beden` agent whose brain is Codex (run ReadOnly via `beyin-codex`) and whose only side-effect
# capability is a default-deny `omurga` execution gate exposing two custom actions:
#   * invman.evaluate_policy_spec  -> shells out to the Python oracle CLI (evaluate_policy_spec.py)
#   * invman.archive               -> reads top-K / appends {spec,result} rows to archive.jsonl
#
# DEPENDENCY POLICY (lab convention + README file map)
#   * Path deps point ONLY at the in-tree beden crates under /home/nima/code/ai/agents/beden/crates.
#   * NO dependency on invman_rust: the rollout oracle is reached exclusively through the Python CLI
#     subprocess, keeping the agent crate a pure orchestration layer (auditable, no FFI coupling).
#   * Edition matches the beden workspace (2024). Crate names are taken verbatim from each crate's
#     own [package].name (e.g. crates/elayaq/core is named `elayaq`, crates/beyin/core is `beyin`).
# =================================================================================================

[package]
name = "agentic-policy-search-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "agentic-policy-search-agent"
path = "src/main.rs"

[dependencies]
# beden body (oz identity + shared core + plug wiring)
oz = { path = "/home/nima/code/ai/agents/beden/crates/oz" }
beden-core = { path = "/home/nima/code/ai/agents/beden/crates/shared/core" }
beden-skill = { path = "/home/nima/code/ai/agents/beden/crates/shared/skill" }
beden-plug = { path = "/home/nima/code/ai/agents/beden/crates/shared/plug" }

# omurga execution gate + action registry + conversation runtime + session transcript
omurga-action = { path = "/home/nima/code/ai/agents/beden/crates/omurga/action" }
omurga-agent = { path = "/home/nima/code/ai/agents/beden/crates/omurga/agent" }
omurga-execution-gate = { path = "/home/nima/code/ai/agents/beden/crates/omurga/execution-gate" }
omurga-runtime = { path = "/home/nima/code/ai/agents/beden/crates/omurga/runtime" }

# beyin brains: core conversation types + the Codex brain
beyin = { path = "/home/nima/code/ai/agents/beden/crates/beyin/core" }
beyin-codex = { path = "/home/nima/code/ai/agents/beden/crates/beyin/codex" }

# elayaq tool-request normalization (transitively used by beyin-codex; kept explicit for clarity)
elayaq = { path = "/home/nima/code/ai/agents/beden/crates/elayaq/core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
